Shorter translation for "Publish comment by email"

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1313,7 +1313,7 @@ es:
       project_invitations: "Invitaciones (%{count})"
       settings: Opciones
     instructions: 
-      send_email: "Publicar un nuevo comentario por email..."
+      send_email: "Publicar comentario por email"
       send_email_conversations: "Publica una nueva conversación por email..."
       send_email_help_conversation: "Para publicar un comentario en esta conversación envia un email a <a href=\"mailto:%{email}\">%{email}</a>. Solo los miembros de este proyecto pueden publicar en esta conversación."
       send_email_help_conversations: "Para crear una nueva conversación envía un email a <a href=\"mailto:%{email}\">%{email}</a> con el tema para el título y el cuerpo para el comentario. Solo los miembros del proyecto pueden crear una nueva conversación."
