--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -872,6 +872,10 @@ en:
       tomorrow: Tomorrow
       due_date: "Display tasks with due date..."
       assigned_to: "Display tasks assigned to..."
+      week: "This week"
+      2weeks: "Next 2 weeks"
+      3weeks: "Next 3 weeks"
+      month: "Within 1 month"
     link:
       new: New Task List
       edit: Edit
