fix non-sense in french translation

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1075,15 +1075,15 @@ fr:
     auth_status: "OAuth Auth"
     auth_status_link: "Lien avec votre compte"
     auth_status_linked: "Relié avec le fournisseur"
-    link_account: "Compte de liaison"
+    link_account: "Activer le lien"
     logged_in: "Connexion réussie"
     not_linked: "Ce service n'est pas relié à votre compte Teambox."
     this_account_will_be_linked_to: "Ce compte sera relié avec %{provider}"
-    unlink_account: "Compte de détachement"
-    user_already_exists_by_email: "L'utilisateur %{email} a déjà un compte Teambox.<br/> Connectez-vous avec ce compte et reliez-le à votre panneau d'enregistrement"
-    user_already_exists_by_login: "L'utilisateur %{login} a déjà un compte Teambox.<br/> Connectez-vous avec ce compte et reliez-le à votre panneau d'enregistrement."
-    your_account_is_linked: "Votre %{provider} profile <strong>est relié</strong> à Teambox."
-    your_account_is_not_linked: "Votre %{provider} profile <strong>n'est pas relié</strong> à Teambox."
+    unlink_account: "Désactiver le lien"
+    user_already_exists_by_email: "L'utilisateur %{email} a déjà un compte Teambox.<br/> Connectez-vous avec ce compte et reliez-le depuis le votre menu d'options."
+    user_already_exists_by_login: "L'utilisateur %{login} a déjà un compte Teambox.<br/> Connectez-vous avec ce compte et reliez-le depuis le votre menu d'options."
+    your_account_is_linked: "Votre profile %{provider} <strong>est relié</strong> à Teambox."
+    your_account_is_not_linked: "Votre profile %{provider} <strong>n'est pas relié</strong> à Teambox."
   page_title: 
     archived_task_lists: "Tâches archivées"
     create_uploads: "Ajouter un fichier"
