Adding "my tasks" to Project#index sidebar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -710,6 +710,8 @@ en:
       all: "All organizations"
 
   tasks:
+    my_tasks_listing:
+      tasks: My Tasks
     errors:
       name:
         cant_be_blank: 'must not be blank'
