--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,11 +42,11 @@ en:
     task_list: "Task list %{id} not found in this project."
     task: "Task %{id} not found in this project."
   deleted:
-    conversation: "Deleted <b>%{name}</b> conversation"
-    task: "Deleted <b>%{name}</b> task"
-    task_list: "Deleted <b>%{name}</b> task list"
-    page: "Deleted <b>%{name}</b> page"
-    upload: "Deleted <b>%{name}</b> file"
+    conversation: "Deleted %{name} conversation"
+    task: "Deleted %{name} task"
+    task_list: "Deleted %{name} task list"
+    page: "Deleted %{name}</b> page"
+    upload: "Deleted %{name} file"
     person: "%{name} is no longer in the project"
     left_project: "You are no longer in this project"
   activities:
@@ -127,7 +127,7 @@ en:
       title: Reset Password
       login_link_sent: "We just sent you an email to %{email} so you can retrieve your password."
       follow_the_link: "Follow the link inside this email to log into Teambox! If you can't find it, look in the spam folder."
-      not_found: "The email <b>%{email}</b> doesn't belong to any Teambox user. Maybe you misspelt it?"
+      not_found: "The email %{email} doesn't belong to any Teambox user. Maybe you misspelt it?"
       change_password_now: "You are now logged in. <b>Choose a new password now</b> so you won't forget it!"
     reset:
       title: You can now reset your password
