--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -867,6 +867,7 @@ en:
       start_on: Starts on... <i>optional</i>
       finish_on: End on... <i>optional</i>
     filter:
+      by_name: Filter tasks by name
       anybody: Anybody
       my_tasks: My tasks
       unassigned: Unassigned
