Renaming "+ Upload" to "+ Image or file"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -810,7 +810,7 @@ en:
     buttons:
       new_note: Text
       new_divider: Divider
-      new_upload: Upload
+      new_upload: Image or file
       new_task_list: Task List
     new:
       title: New Page
